<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Continuous GPS readings</string>
    <string name="leyenda">Lectura GPS continua</string>
    <string name="action_settings">Settings</string>
    <string name="leyendaBotonIniciar">Iniciar lectura GPS</string>
    <string name="leyendaDetenerLectura">Detener lectura GPS</string>
    <string name="leyendaNombreArchivo">Archivo:</string>
    <string name="nombreArchivoDefecto">archivoUbicaciones.txt</string>

</resources>
